sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:10: error: not found: value indexBigPancake
				indexBigPancake = currentPancake;	// gotcha !
                                ^BasicPancake:11: error: not found: value indexBigPancake
			if ( indexBigPancake != 0 )
                             ^BasicPancake:12: error: not found: value indexBigPancake
				flip(indexBigPancake+1);	// putting the pancake at the top
                                     ^